--- a/views/price.hbs
+++ b/views/price.hbs
@@ -20,6 +20,8 @@
                                 <li class="list-group-item">Панель управления</li>
                                 <li class="list-group-item">Аналитика</li>
                                 <li class="list-group-item">Уведомления на почту</li>
+                                <li class="list-group-item">&nbsp;</li>
+                                <li class="list-group-item">&nbsp;</li>
                             </ul>
                             <div class="card-body">
                                 <a href="/register" class="btn btn-primary btn-block">Регистрация</a>
@@ -37,6 +39,8 @@
                                 <li class="list-group-item">Аналитика</li>
                                 <li class="list-group-item">Уведомления на почту</li>
                                 <li class="list-group-item">Уведомления о заказах в мессенджеры</li>
+                                <li class="list-group-item">&nbsp;</li>
+
                             </ul>
                             <div class="card-body">
                                 <a href="/register" class="btn btn-primary btn-block">Регистрация</a>
@@ -49,12 +53,13 @@
                                 <h4 class="card-title mb-0">1 990 р/месяц</h4>
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><strong>Безграничное</strong> число товаров</li>
+                                <li class="list-group-item"><strong>Неограниченное</strong> число товаров</li>
                                 <li class="list-group-item">Панель управления</li>
                                 <li class="list-group-item">Аналитика</li>
                                 <li class="list-group-item">Уведомления на почту</li>
                                 <li class="list-group-item">Уведомления о заказах в мессенджеры</li>
                                 <li class="list-group-item">Добавление своих javascript кодов</li>
+                                
                             </ul>
                             <div class="card-body">
                                 <a href="/register" class="btn btn-primary btn-block">Регистрация</a>
