--- a/views/shop/catalog-item.hbs
+++ b/views/shop/catalog-item.hbs
@@ -13,7 +13,7 @@
 
             {{#if item.description}}
                 <div class="mb-4">
-                    <h2>Описание</h2>
+                    {{!-- <h2>Описание</h2> --}}
                     <div id="editorjs" class=""></div>
                 </div>
 
