--- a/views/partials/head-shop.hbs
+++ b/views/partials/head-shop.hbs
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{{#if title}}{{title}} | {{/if}}{{shop.name}}</title>
-        <meta name='description' content='{{shop.description}}'>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="/css/shop.css">
-        <link rel="icon" type="image/png" sizes="16x16" href="{{shop.logo}}">
-        <link rel="apple-touch-icon" sizes="180x180" href="{{shop.logo}}">
-        <link rel="shortcut icon" href="{{shop.logo}}">
-        <link rel="apple-touch-icon shortcut icon" href="{{shop.logo}}" >
-        <link rel="apple-touch-icon shortcut icon" sizes="76x76" href="{{shop.logo}}">
-        <link rel="apple-touch-icon shortcut icon" sizes="120x120" href="{{shop.logo}}">
-        <link rel="apple-touch-icon shortcut icon" sizes="152x152" href="{{shop.logo}}">
-        <script>document.getElementsByTagName("html")[0].className += " js";</script>
-        
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>{{#if title}}{{title}} | {{/if}}{{shop.name}}</title>
+    <meta name='description' content='{{shop.description}}'>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="/css/shop.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{shop.logo}}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{shop.logo}}">
+    <link rel="shortcut icon" href="{{shop.logo}}">
+    <link rel="apple-touch-icon shortcut icon" href="{{shop.logo}}">
+    <link rel="apple-touch-icon shortcut icon" sizes="76x76" href="{{shop.logo}}">
+    <link rel="apple-touch-icon shortcut icon" sizes="120x120" href="{{shop.logo}}">
+    <link rel="apple-touch-icon shortcut icon" sizes="152x152" href="{{shop.logo}}">
+    <script>document.getElementsByTagName("html")[0].className += " js";</script>
+
+</head>
+
+<body>
     <header>
         <div class="container">
             <div class="row">
@@ -27,19 +29,54 @@
                     {{#if shop.phone}}<a href="tel:{{shop.phone}}" class="header-phone">{{shop.phone}}</a>{{/if}}
                     <div>
                         {{#if shop.wa}}
-                            <a href="https://wa.me/{{shop.wa}}" id="whatsapp" data-toggle="tooltip" target="_blank" title="Напишите нам в WhatsApp"><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="whatsapp" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-whatsapp fa-w-14 fa-2x"><path fill="currentColor" d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z" class=""></path></svg></a>
+                        <a href="https://wa.me/{{shop.wa}}" id="whatsapp" data-toggle="tooltip" target="_blank"
+                            title="Напишите нам в WhatsApp"><svg aria-hidden="true" focusable="false" data-prefix="fab"
+                                data-icon="whatsapp" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+                                class="svg-inline--fa fa-whatsapp fa-w-14 fa-2x">
+                                <path fill="currentColor"
+                                    d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"
+                                    class=""></path>
+                            </svg></a>
                         {{/if}}
                         {{#if shop.telegram}}
-                            <a href="https://t-do.ru/{{shop.telegram}}" target="_blank" id="telegram"><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="telegram-plane" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-telegram-plane fa-w-14 fa-2x"><path fill="currentColor" d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z" class=""></path></svg></a>
+                        <a href="https://t-do.ru/{{shop.telegram}}" target="_blank" id="telegram"><svg
+                                aria-hidden="true" focusable="false" data-prefix="fab" data-icon="telegram-plane"
+                                role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+                                class="svg-inline--fa fa-telegram-plane fa-w-14 fa-2x">
+                                <path fill="currentColor"
+                                    d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"
+                                    class=""></path>
+                            </svg></a>
                         {{/if}}
                         {{#if shop.instagram}}
-                            <a href="{{shop.instagram}}" target="_blank" id="instagram"><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="instagram" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-instagram fa-w-14 fa-2x"><path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" class=""></path></svg></a>
+                        <a href="{{shop.instagram}}" target="_blank" id="instagram"><svg aria-hidden="true"
+                                focusable="false" data-prefix="fab" data-icon="instagram" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+                                class="svg-inline--fa fa-instagram fa-w-14 fa-2x">
+                                <path fill="currentColor"
+                                    d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+                                    class=""></path>
+                            </svg></a>
                         {{/if}}
                         {{#if shop.vk}}
-                            <a href="{{shop.vk}}" target="_blank" target="_blank" id="vk"><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="vk" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="svg-inline--fa fa-vk fa-w-18 fa-2x"><path fill="currentColor" d="M545 117.7c3.7-12.5 0-21.7-17.8-21.7h-58.9c-15 0-21.9 7.9-25.6 16.7 0 0-30 73.1-72.4 120.5-13.7 13.7-20 18.1-27.5 18.1-3.7 0-9.4-4.4-9.4-16.9V117.7c0-15-4.2-21.7-16.6-21.7h-92.6c-9.4 0-15 7-15 13.5 0 14.2 21.2 17.5 23.4 57.5v86.8c0 19-3.4 22.5-10.9 22.5-20 0-68.6-73.4-97.4-157.4-5.8-16.3-11.5-22.9-26.6-22.9H38.8c-16.8 0-20.2 7.9-20.2 16.7 0 15.6 20 93.1 93.1 195.5C160.4 378.1 229 416 291.4 416c37.5 0 42.1-8.4 42.1-22.9 0-66.8-3.4-73.1 15.4-73.1 8.7 0 23.7 4.4 58.7 38.1 40 40 46.6 57.9 69 57.9h58.9c16.8 0 25.3-8.4 20.4-25-11.2-34.9-86.9-106.7-90.3-111.5-8.7-11.2-6.2-16.2 0-26.2.1-.1 72-101.3 79.4-135.6z" class=""></path></svg></a>
+                        <a href="{{shop.vk}}" target="_blank" target="_blank" id="vk"><svg aria-hidden="true"
+                                focusable="false" data-prefix="fab" data-icon="vk" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
+                                class="svg-inline--fa fa-vk fa-w-18 fa-2x">
+                                <path fill="currentColor"
+                                    d="M545 117.7c3.7-12.5 0-21.7-17.8-21.7h-58.9c-15 0-21.9 7.9-25.6 16.7 0 0-30 73.1-72.4 120.5-13.7 13.7-20 18.1-27.5 18.1-3.7 0-9.4-4.4-9.4-16.9V117.7c0-15-4.2-21.7-16.6-21.7h-92.6c-9.4 0-15 7-15 13.5 0 14.2 21.2 17.5 23.4 57.5v86.8c0 19-3.4 22.5-10.9 22.5-20 0-68.6-73.4-97.4-157.4-5.8-16.3-11.5-22.9-26.6-22.9H38.8c-16.8 0-20.2 7.9-20.2 16.7 0 15.6 20 93.1 93.1 195.5C160.4 378.1 229 416 291.4 416c37.5 0 42.1-8.4 42.1-22.9 0-66.8-3.4-73.1 15.4-73.1 8.7 0 23.7 4.4 58.7 38.1 40 40 46.6 57.9 69 57.9h58.9c16.8 0 25.3-8.4 20.4-25-11.2-34.9-86.9-106.7-90.3-111.5-8.7-11.2-6.2-16.2 0-26.2.1-.1 72-101.3 79.4-135.6z"
+                                    class=""></path>
+                            </svg></a>
                         {{/if}}
                         {{#if shop.fb}}
-                            <a href="{{shop.fb}}" target="_blank" target="_blank" id="fb"><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook-f" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="svg-inline--fa fa-facebook-f fa-w-10 fa-2x"><path fill="currentColor" d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z" class=""></path></svg></a>
+                        <a href="{{shop.fb}}" target="_blank" target="_blank" id="fb"><svg aria-hidden="true"
+                                focusable="false" data-prefix="fab" data-icon="facebook-f" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"
+                                class="svg-inline--fa fa-facebook-f fa-w-10 fa-2x">
+                                <path fill="currentColor"
+                                    d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
+                                    class=""></path>
+                            </svg></a>
                         {{/if}}
                     </div>
                 </div>
@@ -47,7 +84,8 @@
                     <ul class="menu">
                         <li><a href="/{{shop.url}}/catalog/">Каталог</a></li>
                         {{#if shop.adresses}}<li><a href="/{{shop.url}}/contacts/">Адреса магазинов</a></li>{{/if}}
-                        {{#if shop.texts}}<li><a href="/{{shop.url}}/payment_delivery/">Оплата и доставка</a></li>{{/if}}
+                        {{#if shop.texts}}<li><a href="/{{shop.url}}/payment_delivery/">Оплата и доставка</a></li>
+                        {{/if}}
                     </ul>
                 </div>
                 <div class="col-md-3 xs-hide text-right align-self-center">
@@ -55,26 +93,33 @@
                         <div class="col align-self-center">
                             {{!-- <span class="js-price" id="js-basket-price">0</span>
                         <br> --}}
-                        <span id="js-count-header-basket" data-count="{{countBasket}}">{{countBasket}}</span> товаров </div>
-                        <div class="col align-self-center text-left"><a href="/{{shop.url}}/basket/" class="btn btn-outline-primary">Корзина</a></div>
+                            <span id="js-count-header-basket" data-count="{{countBasket}}">{{countBasket}}</span>
+                            товаров </div>
+                        <div class="col align-self-center text-left"><a href="/{{shop.url}}/basket/"
+                                class="btn btn-outline-primary">Корзина</a></div>
                     </div>
                 </div>
                 <div class="col-8 align-self-center text-right">
                     <div class="xs-show xs-icon-menu">
                         {{#if shop.phone}}
                         <a href="tel:{{shop.phone}}">
-                            <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-phone" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M11 1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
-                            <path fill-rule="evenodd" d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                            <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-phone" fill="currentColor"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                    d="M11 1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z" />
+                                <path fill-rule="evenodd" d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
                             </svg>
                         </a>
                         {{/if}}
                         <span class="xs-basket">
-                            <a href="">
-                            <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                            </svg>
-                            <span class="badge bg-success" id="js-xs-count-header-basket" data-count="{{countBasket}}">{{countBasket}}</span>
+                            <a href="/{{shop.url}}/basket/">
+                                <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-cart3"
+                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+                                </svg>
+                                <span class="badge bg-success" id="js-xs-count-header-basket"
+                                    data-count="{{countBasket}}">{{countBasket}}</span>
                             </a>
                         </span>
                     </div>
@@ -83,5 +128,9 @@
         </div>
     </header>
     <div class="xs-show xs-link-catalog">
-        <a href="/{{shop.url}}/catalog/">Каталог <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-caret-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 12.796L11.481 8 6 3.204v9.592zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/></svg></a>
+        <a href="/{{shop.url}}/catalog/">Каталог <svg width="1em" height="1em" viewBox="0 0 16 16"
+                class="bi bi-caret-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M6 12.796L11.481 8 6 3.204v9.592zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z" />
+                </svg></a>
     </div>
